hard-gists/1495011/run.log
=== Docker Run Log for 1495011 ===
Started at: Mi 29. Okt 12:15:32 CET 2025

[2025-10-29 12:15:32] START: Running container for 1495011
[2025-10-29 12:15:33] SUCCESS: Container 6e3b1f9dd00786d5b553840e56ac5d359243d540d3b692bdd816eb1d74191328 started for 1495011
=== Container logs for 1495011 ===
  File "/snippet.py", line 95
    print 'rtmpdump ' \
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1495011 ===
[2025-10-29 12:15:35] INFO: Container 6e3b1f9dd00786d5b553840e56ac5d359243d540d3b692bdd816eb1d74191328 has stopped
